--- a/system_id/param_estimation.tex
+++ b/system_id/param_estimation.tex
@@ -1,4 +1,5 @@
-\section{Parameter estimation}
+\section{Parameter estimation} \label{sec:param_estimation}
+
 \subsection{Predetermined linear model}
     The motivation for paramater estimation is to determine unknown parameter values required by the predetermined model.
     This model was derived a prioiri in Section~\ref{sec:linear_model}.
