--- a/system_id/param_estimation.tex
+++ b/system_id/param_estimation.tex
@@ -8,7 +8,7 @@
     RLS
     Cannot work if quadrotor mass also changes, because assume that $m_q$ is known.
 
-\subsection{Cable length estimation}
+\subsection{Cable length estimation} \label{sec:length_estimation}
     The cable length is estimated from the measurement of natural frequency of the swinging payload.
     As described by
     \cite{bisgaard},
