--- a/system_id/plots/system_param_subfigs.tex
+++ b/system_id/plots/system_param_subfigs.tex
@@ -5,5 +5,5 @@
     \input{system_id/plots/different_lengths.tex} % subfigure
     \input{system_id/plots/different_masses.tex} % subfigure
     \caption{HAVOK prediction error for different system parameters}
-    \label{fig:system_parameters}  
+    \label{fig:system_param_subfigs}  
 \end{figure}
