--- a/system_id/system_id.tex
+++ b/system_id/system_id.tex
@@ -30,3 +30,18 @@
     It is difficult to compare the white-box to the black-box models because the real effect will only be seen during control.
     However it is clear that the accuracy of the white-box model degrades significantly 
     when a payload that causes double pendulum dynamics.
+
+    The major advantage of the data-driven approach which was demonstrated in this section 
+    is that the method was applied to different dynamical systems   
+
+    \paragraph{}
+    For each of these payload cases, a different parameter estimation based techniques would needs to be designed for effective control.
+    This is undesirable for practical drone deliveries, especially when the type of paylaod is not known well in advance or changes regularly.
+    A data-driven technique provides a more general solution since it accommodates a larger range of payload types and does not require a prioir modelling information.
+        
+    \paragraph{}
+    Since the a priori white-box model is based on a single pendulum model, 
+    the dynamics described by the model are significantly different from the actual dynamics.
+    This will have a detrimental effect on the control performance of a controller based on such a model,
+    since the controller will be designed for different plant than what it is controlling actually controlling.
+       
