--- a/system_id/implementation.tex
+++ b/system_id/implementation.tex
@@ -666,6 +666,7 @@
         \paragraph{}
         Figure~\ref{fig:prediction_double_pend_black} shows the prediction of the same data-driven methods 
         but for a double pendulum simulation.
+        The same cable length and effective payload mass is used here as in the single pendulum simulation.
         Notice how accurate the prediction is for the first \SI{20}{\second} of the plot.
         In contrast to the white-box model, the black-box model oscillations follow the irregular, 
         multi-frequency response of the actual dynamics.
@@ -676,58 +677,69 @@
 
         \input{system_id/plots/prediction_double_pend_black.tex}
         
+        \paragraph{}
         The double pendulum plant involves a hidden state variable, 
         because the unmeasured angle of the second pendulum 
         is required to fully describe the state of the system.
-        The DMDc and HAVOK models can still approximate the dynamics without measuring this state variable
-        because of the delay embedding and Taken's Embedding Theorem \cite{Kamb2020}.
-        
-        `Takens' Embedding Theorem asserts that when the states of a hidden dynamical system are confined to a low-dimensional attractor, complete information about the states can be preserved in the observed time-series output through the delay coordinate map. However, the conditions for the theorem to hold ignore the effects of noise and time-series analysis'
-        \cite{Yap2014}
-        
-        \input{system_id/plots/MAE_vs_Ntrain_double_pend}
-
-        Not how much more delays are required
-        
-        Takens theorum.
-        Add DMD to plot
+        However, the DMDc and HAVOK models are still able to approximate the dynamics quite accurately 
+        without measuring this state variable.
+        This is due to the extent of the delay embedding of the models \cite{Kamb2020}.
+        Figure~\ref{fig:MAE_vs_q_double_pend} shows the prediction error 
+        as a function of the number of delays in the model for a double pendulum.
+        Note how much more delays is required before the prediction error reaches steady-state 
+        than for a single pendulum showed in Figure~\ref{fig:NMAE_vs_q}.
+        This is because the dynamics are more complex 
+        and model needs a lot more parameters to account for the hidden state variable.
+        % Also note that HAVOK seems to mostly produces slightly lower errors for low values of $q$,
+        % but DMDc and HAVOK produce very similar
+                
         \input{system_id/plots/MAE_vs_q_double_pend}
 
         \paragraph{}
-        The double pendulum is one example of a payload case that would require a redesign of the control architecture.
-        Other dynamic payloads that are difficult to model with a white-box method are containers holding a fluid.
-        Examples: 
+        Overall, the data-driven system identification approaches were shown to work well 
+        for both the single and double pendulum payloads.
+        In contrast, the white-box method describes the general shape of the single pendulum dynamics well, 
+        but do not perform well for a double pendulum simulation 
+        because it was specifically designed for the single pendulum payload.
+        The data-driven approaches therefore provide an accurate system identification method 
+        for a much larger range of payload types without needing a redesign for specific payload dynamics.
+        
+        % ?? plot q of single pend on the same axis
 
-        \paragraph{}
-        Another payload case that will cause inaccuracies in estimated white-box model 
-        is if a payload is attached rigidly to the quadrotor while also carrying a suspended payload.
-        The payload mass estimation is based on the assumption that the quadrotor mass is known.
-        However if a mass is rigidly attached to the vehicle, the effective quadrotor mass is changed and the RLS payload mass estimation is no longer accurate.
+        % \input{system_id/plots/MAE_vs_Ntrain_double_pend}
 
+        % \paragraph{}
+        % The double pendulum is one example of a payload case that would require a redesign of the control architecture.
+        % Other dynamic payloads that are difficult to model with a white-box method are containers holding a fluid.
+        % Examples: 
+
+        % \paragraph{}
+        % Another payload case that will cause inaccuracies in estimated white-box model 
+        % is if a payload is attached rigidly to the quadrotor while also carrying a suspended payload.
+        % The payload mass estimation is based on the assumption that the quadrotor mass is known.
+        % However if a mass is rigidly attached to the vehicle, the effective quadrotor mass is changed and the RLS payload mass estimation is no longer accurate.
         
-        
-        
-        \paragraph{}
-        To determine whether the white-box or data-driven methods perform better with these payloads, 
-        the performance of these methods need to be compared to each other.
-        However, comparing these methods is a non-trivial task
-        because they result in different types of models which are used in different types of controllers.
-        The white-box system identification technique generates a continuous-time, state space model 
-        which is used in an LQR controller. 
-        This is in the form:
-        \begin{equation}
-            \dot{x} = A x + B u
-        \end{equation}
-        For this model, the accuracy of the time-derivative estimate  
-        at the current time-step is important for control.
-        Hence, a k-step-ahead prediction error is not a good measure of performance for this model.
-        In contrast, the data-driven techniques result in a discrete state space model,
-        \begin{equation}
-            x_{k+1} = A x_k + B u_k ,
-        \end{equation} 
-        which is used in a MPC.
-        The k-step-ahead prediction accuracy of this model is important for the performance of the MPC.
-        Therefore comparing the performance of the controllers which use these models 
-        is a better approach than comparing the model accuracy.
-        This will be investigated in Chapter~\ref{chap:control_systems}.
+        % \paragraph{}
+        % To determine whether the white-box or data-driven methods perform better with these payloads, 
+        % the performance of these methods need to be compared to each other.
+        % However, comparing these methods is a non-trivial task
+        % because they result in different types of models which are used in different types of controllers.
+        % The white-box system identification technique generates a continuous-time, state space model 
+        % which is used in an LQR controller. 
+        % This is in the form:
+        % \begin{equation}
+        %     \dot{x} = A x + B u
+        % \end{equation}
+        % For this model, the accuracy of the time-derivative estimate  
+        % at the current time-step is important for control.
+        % Hence, a k-step-ahead prediction error is not a good measure of performance for this model.
+        % In contrast, the data-driven techniques result in a discrete state space model,
+        % \begin{equation}
+        %     x_{k+1} = A x_k + B u_k ,
+        % \end{equation} 
+        % which is used in a MPC.
+        % The k-step-ahead prediction accuracy of this model is important for the performance of the MPC.
+        % Therefore comparing the performance of the controllers which use these models 
+        % is a better approach than comparing the model accuracy.
+        % This will be investigated in Chapter~\ref{chap:control_systems}.
 
